# cacheray

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md
.github/workflows/: ci.yml
cacheray/: .gitignore  CMakeLists.txt  README.md
cacheray/include/cacheray/: cacheray-utils.h  cacheray.h  cacheray_options.h  cacheray_trace.h
cacheray/src/: cacheray-utils.c  cacheray.c  cacheray_instrum.inc  cacheray_options.c
cacheray/test/: CMakeLists.txt
cacheray/test/cooperative/: CMakeLists.txt  cooperative.c  matrixer.c  sorter.c
cacheray/test/cooperative/include/: matrixer.h  sorter.h
cacheray/test/grand/: CMakeLists.txt  grand.c
cacheray/test/structs/: CMakeLists.txt  main.c
cacheray/tracecheck/: CMakeLists.txt  cacheray-trace-check.c  tracecheck.c
info/: README.md  TRACEFILE_NEW_STANDARD.md  TRACEFILE_STANDARD.md  graph.gv  traceformat.md
scripts/: clang-memtrack.sh  tracecheck.py
scripts/dwarf2json/: dwarf2json-test.py  dwarf2json.py
scripts/dwarf2json/res/: Makefile  test1.c
sim/: README.md  cache.conf
sim/simulator_java/: .gitignore  GUIDE  pom.xml
sim/simulator_java/src/main/java/cache/: CacheReplacementManager.java  DirectMappedCache.java  FullyAssociativeCache.java  NAssociativeCache.java  OmniCache.java  SimpleCache.java  SimpleCacheFactory.java
sim/simulator_java/src/main/java/core/: FreeEvent.java  MallocEvent.java  MemEvent.java  SimpleSim.java  TraceEvent.java  TraceFile.java  TraceFileReader.java
sim/simulator_java/src/main/java/memory/: MemoryRange.java
sim/simulator_java/src/main/java/types/: Address.java  Block.java  CacheAccess.java  CacheBlock.java  Configuration.java  RTTA.java  RTTAContainer.java  Struct.java  StructMember.java  StructType.java  TraceType.java  Type.java  TypeData.java
sim/simulator_java/src/test/java/: TestAddress.java  TestConfiguration.java  TestSimpleCache.java  TestSimpleSim.java  TestStructTypeRewrite.java  TestTraceFile.java  TestTypeData.java  cache.conf  structs.txt
sim/simulator_java/src/test/resources/big_test/: big.dwarf.json  big.trace
sim/simulator_java/src/test/resources/configuration_files/: basic.json  two_layer.json
sim/simulator_java/src/test/resources/struct_test/: cacheray.0.trace  struct.remap  structs.dwarf.json
testbench/: .gitignore  run.sh
testbench/reorder/: Makefile  init.sh  reorder.c  reorder.remap
testbench/simple/: Makefile  init.sh  simple-mt.c  simple-no-instrum.c  simple.c
